--- a/.env
+++ b/.env
@@ -12,9 +12,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=asrmart
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=asrmartc_asrmartc
+DB_USERNAME=asrmartc_asrmartc
+DB_PASSWORD=asrmartc_asrmartc
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
