--- a/.env
+++ b/.env
@@ -34,8 +34,8 @@ MAIL_HOST="mail.asrmart.com"
 MAIL_PORT="465"
 MAIL_USERNAME="support@asrmart.com"
 MAIL_PASSWORD="%&PUBY{}wibw"
-MAIL_ENCRYPTION="asrmart"
-MAIL_FROM_ADDRESS="ASR Mart"
+MAIL_ENCRYPTION="SSL"
+MAIL_FROM_ADDRESS="support@asrmart.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -96,6 +96,11 @@ COD_STATUS="1"
 COD_IMAGE="cod.jpg"
 
 BANK_ROUTING_NUMBER="asdf"
+
+
+
+
+
 
 
 
