--- a/.env
+++ b/.env
@@ -83,6 +83,14 @@ BANK_ACCOUNT_NUMBER="4154"
 BANK_ACCOUNT_HOLDER_NAME="jon"
 BANK_ACCOUNT_BRANCH="us"
 
+
+
+BKASH_NUMBER="01622299728"
+NAGAD_NUMBER="01704976505"
+ROCKET_NUMBER="01704976505"
+SURECASH_NUMBER="01704976505"
+UPAY_NUMBER="01704976505"
+
 FACEBOOK_CLIENT_ID="asdf"
 FACEBOOK_CLIENT_SECRET="asdf"
 FACEBOOK_CALLBACK_URL="asdf"
@@ -96,6 +104,11 @@ COD_STATUS="1"
 COD_IMAGE="cod.jpg"
 
 BANK_ROUTING_NUMBER="asdf"
+
+
+
+
+
 
 
 
